Opened 15 years ago

Closed 14 years ago

#6326 closed bug (fixed)

GM965 Fail

Reported by: Duggan Owned by: axeld
Priority: normal Milestone: R1
Component: Drivers/Graphics/intel_extreme Version: R1/Development
Keywords: Cc: elikcoreighn@…
Blocked By: Blocking:
Platform: All

Description

I'm using an Intel GM965/GL960 (GMA X3100) and it used to flicker quite quickly (every other frame was completely black) until ~R1A2 where now the screen is completely black after boot. I've used the VESA drivers since I've ran it native as the intel extreme drivers have been unusable. I'm sorry if this is a duplicate but no other tickets seem to have quite the same symptoms for one reason or another. Attached is the pertinent section of a syslog.

Attachments (2)

intel extreme syslog.txt (3.7 KB ) - added by Duggan 15 years ago.
Section of syslog where intel extreme driver is being initialized
IMAGE_094_2.jpg (261.2 KB ) - added by Duggan 15 years ago.
Monitor photo plugged into VGA port

Download all attachments as: .zip

Change History (7)

by Duggan, 15 years ago

Attachment: intel extreme syslog.txt added

Section of syslog where intel extreme driver is being initialized

comment:1 by diver, 15 years ago

Is your monitor connected to the VGA or DVI?

comment:2 by Duggan, 15 years ago

Neither, its a laptop... and by that I mean I don't know what the connection is internally :/ I'm more of a desktop man myself. I don't really know whats going on here, I'd try to debug it if I could myself. Wouldn't the line "DC: ddc2_read(): DDC information read failure" and the following "intel_extreme: getting EDID failed!" imply there's an overall problem with the driver and not with a specific connector? Again, I don't know whats going on, so please forgive me if I sound stupid here... I'll try plugging a monitor in and seeing if that helps...

Last edited 15 years ago by Duggan (previous) (diff)

comment:3 by Duggan, 15 years ago

Update: I stand corrected... I connected my monitor into the VGA connector and got some output.... thoroughly garbled. I'll upload a picture as soon as either I can mount my phone or restart into windows.

by Duggan, 15 years ago

Attachment: IMAGE_094_2.jpg added

Monitor photo plugged into VGA port

comment:4 by Duggan, 15 years ago

In hindsight I may have seen another screenshot similar to this, so this ticket may be a duplicate afterall, I'll have to check...

comment:5 by pulkomandy, 14 years ago

Resolution: fixed
Status: newclosed

Fixed in hrev38329.

Note: See TracTickets for help on using tickets.